--- a/templates/base.html
+++ b/templates/base.html
@@ -88,6 +88,18 @@
             color: rgba(255, 255, 255, 1) !important;
         }
 
+        .normal-text-link {
+          color: inherit;
+          text-decoration: inherit;
+            border-radius: 0.375rem;
+  -moz-border-radius: 0.375rem;
+  -webkit-border-radius: 0.375rem;
+        }
+
+        .normal-text-link:hover {
+            background-color: rgba(33, 37, 41, 0.03);
+        }
+
 
     </style>
 
