Add gunicorn for production. #patch

--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -67,7 +67,7 @@
                                 {% endif %}
                             </a>
                             {% if match.finished %}
-                                <a class="col-2 text-secondary normal-text-link" target="_blank"
+                                <a class="col-2 text-secondary normal-text-link"
                                    href="{% url 'match-predictions' match_id=match.pk %}">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
                                          class="bi bi-box-arrow-up-left" viewBox="0 0 16 16"
