--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load cust_variables %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,6 +19,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    {% sentry_html %}
 
     <style>
         .hero-home {
