Add postgres option. #patch

--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -9,7 +9,7 @@
                 <h2>Sign Up</h2>
                 <p>The Rules summarized:<br>
                 <ul class="pb-2 px-5" style="text-align: left;">
-                    <li class="p-1">You predict the results of the matches, the group winners, and the EURO 2024 Chamion.
+                    <li class="p-1">You predict the results of the matches, the group winners, and the EURO 2024 Champion.
                     </li>
                 <li class="p-1">Points are awarded based on <a class="link-light fst-italic" target="_blank" href="{% url 'rules' %}">"The Rules"-Page</a>.</li>
                     <li class="p-1">Everyone puts ￡5 in the pot, with 50% of the pot being donated to charity and 50% of the pot
